Update bootcompiler